@@ -1,6 +1,7 @@
 plugins {
     id 'java'
-    id "org.openjfx.javafxplugin" version "0.0.9"
+    id 'application'
+    id "org.openjfx.javafxplugin" version "0.0.13"
     id 'maven-publish'
 }
 
@@ -18,6 +19,13 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
+application {
+    mainClass = 'at.ac.fhcampuswien.snake.SnakeApp'
+    applicationDefaultJvmArgs = [
+            "--module-path", "C:/Users/a904534/Projekts/snake/javafx-sdk-23.0.1/lib",
+            "--add-modules", "javafx.controls,javafx.fxml"
+    ]
+}
 
 group = 'at.ac.fhcampuswien.snake'
 version = '1.0-SNAPSHOT'
@@ -30,6 +38,6 @@ tasks.withType(JavaCompile) {
 }
 
 javafx {
-    version = "17"                  // JavaFX Version
+    version = "17.0.2"                  // JavaFX Version
     modules = [ "javafx.controls", "javafx.fxml", "javafx.media" ] // JavaFX modules. Add them to this array.
 }
